# Robot-Fleet-Dashboard

./: .env.example  .gitignore  ADDING_ROBOTS.md  CLAUDE.md  MotorAggregateInfo.msg  MotorInfo.msg  MotorStatus.msg  README.md  checklist.md  config.yaml.example  flexa_b2_pingchecker.py  motorReader.py  ping_address.py  ping_addresses.py  ping_gui.py  pyproject.toml  requirements.txt  rmHelper.py  ros_api_server.py  version.py  web.py  web_additions.py
.github/workflows/: ci.yml
static/: dashboard.js  index.html
static/js/: claude-badge.js  main.js  motorDataWorker.js
static/js/components/: MotorDataComponent.js  MotorDetailComponent.js  RobotControlComponent.js  RobotIndicatorComponent.js  RobotManagementComponent.js
static/js/services/: MotorDataService.js
